# Body-Animation-in-OpenGL

./: AnimationProgram.h  AssimpObjLoader.h  CGproject  CGproject.cbp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SkinningDebug.h  assImport.h  camera.cpp  camera.h  cmake_install.cmake  debug.fs  debug.vs  debug_skinning_technique.cpp  debug_skinning_technique.h  lighting.fs  lighting_technique.h  main.cpp  math_3d.cpp  shader.fs  skinned_mesh.cpp  skinned_mesh.h  skinning.fs  skinning_technique.cpp  skinning_technique.h  stb_image.cpp  stb_image.h  technique.cpp
assimp/: Assimp.cbp  CMakeCache.txt  Makefile  assimp.pc  cmake_install.cmake  cmake_uninstall.cmake
assimp/code/: Makefile  cmake_install.cmake
assimp/test/: Makefile  cmake_install.cmake
assimp/test/headercheck/: Makefile  cmake_install.cmake
assimp/tools/assimp_cmd/: Makefile  cmake_install.cmake
link/model/ancientbow/c00/: ancientbow-c00.blend
link/model/ancientbowarrow/c00/: ancientbowarrow-c00.blend
link/model/body/c00/: Collection.md5mesh  link++.mtl  link+.md5anim  link+.md5mesh  link+.mtl  link-c00.mtl  link.md5anim  link.md5mesh  link_head.tga  link_limit1.md5anim  link_limit1.md5mesh  linkk.md5mesh
link/model/boomerang/c00/: boomerang-c00.blend
link/model/bow/c00/: bow-c00.blend
link/model/bowarrow/c00/: bowarrow-c00.blend
link/model/navy/c00/: navy-c00.blend
link/model/parasail/c00/: parasail-c00.blend
ness/model/body/c00/: NESS  NESS+.md5anim  (+37 more)
ogldev/: ogldev_basic_mesh.cpp  ogldev_material.h  ogldev_math_3d.h  ogldev_texture.cpp  ogldev_util.cpp  ogldev_util.h
(+4 files in other folders)
